--- a/Projects/JS/Stock Market App/styles/_summary.scss
+++ b/Projects/JS/Stock Market App/styles/_summary.scss
@@ -7,7 +7,7 @@
         @include mixins.flex;
         column-gap: 2rem;
         font-weight: bold;
-        font-size: large;
+        font-size: 1.25rem;
         .profit
         {
             color: green;
